--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,20 @@
 <h1>Editing Book</h1>
 
+<% if flash[:notice] %>
+  <p style="color: green;"><%= flash[:notice] %></p>
+<% end %>
+
+<% if @book.errors.any? %>
+  <div>
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_with model: @book do |f| %>
 <div class="field">
   <%= f.label :title %>
@@ -13,11 +28,11 @@
 
 <div class="action">
   <%= f.submit 'Update Book' %>
-  
+
 </div>
 <% end %>
 
-<%= link_to 'Show', book_path(@book) %>
+<%= link_to 'Show', @book %>
  |
-<%= link_to 'Back', book_path(@book) %>
+<%= link_to 'Back', books_path %>
 
